<resources>
    <string name="app_name">Gorbachev_CryptocurrencyApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recyclerH">\"H. \"</string>
    <string name="recyclerD">\"D. \"</string>
    <string name="recyclerW">\"W. \"</string>
    <string name="themeValueLight">Light</string>
    <string name="themeValueDark">Dark</string>
    <string name="textSizeLittle">\"Little      \"</string>
    <string name="textSizeMiddle">\"Middle      \"</string>
    <string name="textSizeBig">\"Big         \"</string>
    <string name="signedOutMes">Signed out successfully</string>
    <string name="appInfoMes">Your support in the world of digital currencies</string>
    <string name="appInfoFirstFeatures">Information about any coin</string>
    <string name="appInfoSecondFeatures">Second cool feature</string>
    <string name="appInfoThirdFeatures">Third cool feature</string>
    <string name="LetsStartMes">Let`s start!</string>
    <string name="SingInBtnText">Sing in with google</string>
    <string name="RememberMeText">Remember me</string>
    <string name="SingOutBtnText">Sing out</string>
    <string name="langSettingsTitle">Language</string>
    <string name="langSettingsValue">English</string>
    <string name="themeSettingsTitle">Theme</string>
    <string name="themeSettingsSwitcher">Dark</string>
    <string name="textSizeSettingsTitle">Text size</string>
    <string name="textSizeSettingsValue">middle</string>
    <string name="notificationSettingsTitle">Notifications</string>
    <string name="notificationSettingsValue">All</string>
    <string name="appTitle">Cryptocurrency Assistant</string>
</resources>